# EFADA-upon-demand-

./: README.md  final paper.docx  final project with no test code.py
face attendance/: Departments.txt  attendance.db  config.json  front design.py  how it works must read to run  log.txt  main.py  signouts.txt  untitled0.py  util.py
fastapi-hf/: Dockerfile  app.py  docker_compose.yml  requirements.txt  test_api.py
first RAG production app/: custom_types.py  data_loader.py  main.py  pipeline explaination.txt  pyproject.toml  vectordp.py
first RAG production app/qdrant_storage/: raft_state.json
python try to modify/: Read me  main.py
this is was the intial use case we tried to apply motion detection using KNN algorithm on/: main.py  summarize of the project theory
